--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
         }
 
         h1 {
+            color: aqua;
             width: 1000px;
             height: 130px;
             margin: 5px;
